project-container JC: center

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -116,6 +116,7 @@ header {
 
 #projects-container{
     display: grid;
+    justify-content: center;
     grid-template-columns: repeat(3, 450px);
     grid-template-rows: repeat(2, 450px);
 }
