--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,9 @@ body{
     font-size: 2em;
     margin-bottom: 30px;
 }
+a:hover{
+    color: rgb(241, 218, 12);
+}
 
             // ------------------------------ HOME PART ------------------------------ //
 
@@ -37,9 +40,6 @@ header {
         a{
             text-decoration: none;
             color: white;
-        }
-        a:hover{
-            color: rgb(241, 218, 12);
         }
     }
     #link {
@@ -84,13 +84,13 @@ header {
         height: 50px;
         border: 1px, solid gray;
         border-radius: 50px;
-
-        a{
-            color: white;
-            font-size: 1.5em;
-            font-weight: bold;
-            text-decoration: none;
-        }
+        color: white;
+        font-size: 1.5em;
+        font-weight: bold;
+        text-decoration: none;
+    }
+    button:hover{
+        cursor: pointer;
     }
 }
 #home-title{
@@ -111,6 +111,10 @@ header {
     display: flex;
     flex-direction: row;
 }
+#about-text{
+    padding-left: 12vw;
+    font-size: larger;
+}
 
             // ------------------------------ PROJECTS PART ------------------------------ //
 
@@ -118,7 +122,7 @@ header {
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(3, 450px);
-    grid-template-rows: repeat(2, 450px);
+    grid-template-rows: repeat(2, 500px);
 }
 .project{
     text-align: center;
@@ -126,7 +130,7 @@ header {
     border:2px solid rgb(70, 68, 66);
     border-radius: 10px;
     width: 350px;
-    height: 400px;
+    height: 450px;
     h3{
         font-size: 2em;
     }
@@ -140,8 +144,19 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    padding-top: 105px;
+}
+.project-link-container{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 30px;
+    a{
+        color:rgb(98, 13, 155);
+        font-size: 1.5em;
+    }
 }
             // ------------------------------ CONTACT PART ------------------------------ //
+
 #contact, footer{
     background-color: black;
     display: block;
