--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,6 +47,7 @@ header {
         flex-direction: column;
         align-items: center;
         position: fixed;
+        z-index: 1;
         top: 350px;
         left: 15px;
 
@@ -120,7 +121,7 @@ header {
 
 #projects-container{
     display: grid;
-    justify-content: center;
+    // justify-content: center;
     grid-template-columns: repeat(3, 450px);
     grid-template-rows: repeat(2, 500px);
 }
@@ -134,6 +135,9 @@ header {
     h3{
         font-size: 2em;
     }
+    p{
+        margin-top: 35px;
+    }
 }
 .project:hover{
     border:2px solid rgb(241, 169, 12);
@@ -144,16 +148,80 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    padding-top: 105px;
+    height: 70px;
+    padding-top: 120px;
+    .svg-mongo{
+        padding-top: 15px;
+    }
+    .svg-express{
+        padding-top: 15px;
+    }
+    .svg-js{
+        padding-top: 15px;
+    }
+    .fa-sass{
+        font-size:3em;
+        padding-top: 20px;
+        color: rgb(335, 13, 79);
+    }
+    .fa-gulp{
+        font-size:3em;
+        padding-top: 20px;
+        width: 65px;
+        color: red;
+    }
+    .fa-php{
+        font-size:3em;
+        padding-top: 20px;
+        color: rgb(31, 95, 233);
+    }
+    .fa-wordpress{
+        font-size:3em;
+        padding-top: 20px;
+        color: rgb(31, 87, 207);
+    }
+    .fa-react{
+        font-size:3em;
+        padding-top: 20px;
+        color: rgb(22, 101, 190);
+    }
+    .fa-node-js{
+        font-size:3em;
+        padding-top: 20px;
+        width: 65px;
+        color: rgb(30, 228, 23);
+    }
 }
 .project-link-container{
     display: flex;
     justify-content: space-around;
-    padding-top: 30px;
+    padding-top: 40px;
     a{
-        color:rgb(98, 13, 155);
+        color: rgb(192,197,206);
         font-size: 1.5em;
     }
+}
+.project-link-git{
+    &:hover > .fa-folder-open{
+        display: block;
+    }
+    &:hover > .fa-folder{
+        display: none;
+    }
+}
+.fa-folder-open{
+    display: none;
+}
+.project-link-net{
+    &:hover > .fa-sign-out-alt{
+        display: block;
+    }
+    &:hover > .fa-sign-in-alt{
+        display: none;
+    }
+}
+.fa-sign-out-alt{
+    display: none;
 }
             // ------------------------------ CONTACT PART ------------------------------ //
 
@@ -230,3 +298,4 @@ footer{
         padding: 20px 0px;
     }
 }
+
