resolve hamburger menu bug

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -368,7 +368,7 @@ header{
     background-color: transparent;
     #navbar{
         .svg-inline--fa {
-            display: none;
+            display: block;
         }
     }
     #navbar{
