--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,7 +67,7 @@ header {
         }
     }
     .social{
-        font-size: 30px;
+        font-size: 25px;
         margin: 10px 15px;
         color: whitesmoke;
     }
@@ -354,6 +354,265 @@ footer{
 
             // ------------------------------ MEDIA QUERIES ------------------------------ //
 
+@media only screen and (max-width: 1100px) {
+
+.part {
+    padding: 20px 30px;
+}
+.part-title{
+    color: #4f5b66;
+    font-size: 1.5em;
+    margin-bottom: 15px;
+}
+header{
+    #hambIcon {
+        color: white;
+        font-size: 20px;
+        margin: 25px 15px;
+        display: block;
+        cursor: pointer;
+        width: 25px;
+    }
+    #link {
+        position: fixed;
+        top: 363px;
+        left: 10px;
+        hr.vertical {
+            border: 0;
+            border-right-color: currentcolor;
+            border-right-style: none;
+            border-right-width: 0px;
+            border-right: 1px dashed #fff;
+            color: #fff;
+            height: 70px;
+            width: 2px;
+        }
+        svg {
+            font-size: 20px;
+        }
+    } 
+    #link.active{
+        opacity: 1;
+        top: 45px;
+        left: 350px
+    }
+}
+#home{
+    #home-moreInfo{
+        margin-top: 11rem;
+    }
+    #home-title{
+        h1 {
+            font-size: 3.5em;
+            margin-top: 16rem;
+            text-align: center;
+        }
+        h2 {
+            font-size: 1.5em;
+        }
+        text-align: center;
+        padding: 1em;
+    }
+}
+#home-button{
+    margin-top: 255px;
+}
+#about{
+    height: auto;
+} 
+#about-container{
+    display: flex;
+    flex-direction: column;
+    img{
+        margin: auto;
+        width: 150px;
+        height: 200px;
+    }
+    #about-text {
+        text-align: left;
+        font-size: 1em;
+        line-height: 1.5em;
+    }
+}
+.project{
+    min-width: 300px;
+}
+#contacts-container {
+    display: flex;
+    flex-direction: row;
+}
+#contacts-container-left, #contacts-container-right{
+    width: 50%;
+}
+#contacts-container-left{
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .contact-box{
+        background-color: #c5cad5;
+    }
+}
+#contacts-container-right{
+    text-align: center;
+    h3 {
+        font-size: 1.5em;
+    }
+} 
+#contacts-container-right-button a {
+    background-color: #0085dd;
+    border-radius: 50px;
+    color: #fff;
+    font-size: 1em;
+    font-weight: 700;
+    padding: 10px 31px;
+    text-decoration: none;   
+}
+}
+@media only screen and (max-width: 700px) {
+
+.part {
+    padding: 20px 30px;
+}
+.part-title{
+    color: #4f5b66;
+    font-size: 1.5em;
+    margin-bottom: 15px;
+}
+header{
+    background-color: transparent;
+    #navbar{
+        .svg-inline--fa {
+            display: block;
+        }
+    }
+    #navbar{
+        ul{
+            display: none;
+        }
+    }
+    #navbar.active {
+        display: block;
+        position: fixed;
+        flex-direction: column;
+        background-color: black;
+        opacity: 70%;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+        padding: 0;
+        ul{
+            display: block;
+        }
+        li {
+            margin:1.5rem 0;
+        }
+    }
+    #hambIcon {
+        color: white;
+        font-size: 20px;
+        margin: 25px 15px;
+        display: block;
+        cursor: pointer;
+        width: 25px;
+    }
+    #link {
+        opacity:0;
+        position: fixed;
+        top: 363px;
+        left: 10px;
+        hr.vertical {
+            border: 0;
+            border-right-color: currentcolor;
+            border-right-style: none;
+            border-right-width: 0px;
+            border-right: 1px dashed #fff;
+            color: #fff;
+            height: 35px;
+            width: 2px;
+        }
+        svg {
+            font-size: 20px;
+        }
+    } 
+    #link.active{
+        opacity: 1;
+        top: 45px;
+        left: 350px
+    }
+}
+#home{
+    #home-moreInfo{
+        margin-top: 11rem;
+    }
+    #home-title{
+        h1 {
+            font-size: 3em;
+            margin-top: 16rem;
+            text-align: center;
+        }
+        h2 {
+            font-size: 1em;
+        }
+        text-align: center;
+        padding: 1em;
+    }
+}
+#home-button{
+    margin-top: 220px;
+}
+#about{
+    height: auto;
+} 
+#about-container{
+    display: flex;
+    flex-direction: column;
+    img{
+        margin: auto;
+        width: 150px;
+        height: 200px;
+    }
+    #about-text {
+        text-align: left;
+        font-size: 1em;
+        line-height: 1.5em;
+    }
+}
+.project{
+    min-width: 300px;
+}
+#contacts-container {
+    display: flex;
+    flex-direction: column;
+}
+#contacts-container-left, #contacts-container-right{
+    width: 100%;
+}
+#contacts-container-left{
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .contact-box{
+        background-color: #c5cad5;
+    }
+}
+#contacts-container-right{
+    h3 {
+        font-size: 1.5em;
+    }
+} 
+#contacts-container-right-button a {
+    background-color: #0085dd;
+    border-radius: 50px;
+    color: #fff;
+    font-size: 1em;
+    font-weight: 700;
+    padding: 10px 31px;
+    text-decoration: none;   
+}
+}
+
 @media only screen and (max-width: 450px) {
 
 .part {
@@ -464,7 +723,7 @@ header{
     }
 }
 .project{
-    min-width: 227px;
+    min-width: 300px;
 }
 #contacts-container {
     display: flex;
@@ -475,6 +734,9 @@ header{
 }
 #contacts-container-left{
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     .contact-box{
         background-color: #c5cad5;
     }
